[package]
name = "process-listdata"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
once_cell = "1.9"
regex = "1"


[[bin]]
name="mcs1"
path="src/mcs1.rs"

[[bin]]
name="img_integrate"
path="src/img_integrate.rs"

[[bin]]
name="se-analyze"
path="src/analyze.rs"